if we can detect they are remote.

-------------------------------------------------------------------------------

Thu Oct 28 16:16:36 PDT 1999
(Raster)

update desktop property even if its sticky.........

-------------------------------------------------------------------------------

Sat Oct 30 12:37:48 PDT 1999
(Mandrake)

fixed KDE from accidentally closing when we didn't mean to exit.


-------------------------------------------------------------------------------

Wed Nov  3 00:45:47 EST 1999
(Christian)

Fixed the segfault that Cale Gibbard reported -- hitting
the close button in groups dialogs. Hey who among the
gentlemen around here removed the apply button? He missed
that :)
 

-------------------------------------------------------------------------------

Fri Nov  5 14:24:02 PST 1999
(Mandrake)

holy crap I can't believe I didn't see that bug sooner.
This should fix the "maximize seems to mess up when I have KDE support
enabled" bug.


-------------------------------------------------------------------------------

Sat Nov  6 10:51:24 PST 1999
(Mandrake)

removed two warnings when compiled with --disable-zoom


-------------------------------------------------------------------------------

Sat Nov  6 11:54:31 PST 1999
(Raster)

fixed sticky windows beig moved by the pager problems....... :) you can't lose
them now anyway... :)

-------------------------------------------------------------------------------

Sat Nov  6 11:58:59 PST 1999
(Raster)

use no backing pixel for windows by default... :)

-------------------------------------------------------------------------------

Sat Nov  6 11:31:11 PST 1999
(Mandrake)

minor ArrangeRects() param change.  updated all the source to use the new
params.  I have to write ArrangeRects() to do it right now, too.

-------------------------------------------------------------------------------

Sat Nov  6 14:03:54 PST 1999
(Raster)

fix some clipping code for arrage stuff...