@@ -5,6 +5,7 @@ KDE issue with E's logout mechanism (wiping KDE stuff even if you hit no)
 Snapshot command won't allow you to restart an app from another machine now
 desktop property gets updated for sticky windows now correctly (for eterm)
 Bug in KDE support where maximizing a window would go taller than the screen if you weren't running kpanel.
+Fixed a bug in KDE support where windows would place themselves underneath the kpanel
 
 The Road to 0.17 (post 0.16.x):
 File Manager Preview Application (you'll hopefully get a chance to see a little bit of a preview of what E's filemanager will look like)
